bdr.BDR2.scala.error
Compilation error:
BDR2:8: error: identifier expected but integer literal found.
  case readMessage() if readMessage() == "D" => forward(steps:4)
                                                              ^BDR2:17: error: ')' expected but '}' found.
  } 
  ^